--- a/css/customvideoplayer-styles.css
+++ b/css/customvideoplayer-styles.css
@@ -6,7 +6,7 @@ html {
     box-sizing: inherit;
 }
 
-body {
+.body1 {
     margin: 0;
     padding: 0;
     display: flex;
@@ -17,6 +17,8 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+
 
 .player {
     max-width: 750px;
